<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FavoriteFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_film_favorit"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_favorit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_belumFavoritMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_menambahkan_film_favorit"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_acara_tv_favorit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tv_favorit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        <TextView
            android:id="@+id/tv_belumFavoritTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_menambahkan_acara_tv_favorit"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>