<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_photoListMovie"
            android:layout_width="100dp"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nameMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/film_name"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14sp"
                    android:layout_height="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_star_yellow_24dp"/>

                <TextView
                    android:id="@+id/tv_rateMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    android:maxLines="3"
                    android:text="@string/rating" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14sp"
                    android:layout_height="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_access_time_black_24dp"/>

                <TextView
                    android:id="@+id/tv_dateMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:maxLines="3"
                    android:text="@string/release_date" />

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>